portal/static/less/eproms.less
/* ... */
#regForm input[type="submit"],
#loginForm input[type="submit"] {
   background-color: @btnColor;
   text-align: center;
   padding: 1.1em 2em 1em;
   height: 52px;
   display: block;
   margin: auto;
}
#regForm .divider,
#loginForm .divider {
  padding: 0.5em 0.75em;
  text-align: center;
}
@media (min-width: 416px) {
  #regForm input,
  #loginForm input,
  #socialMediaRegistrationContainer .btn-social,
  #regForm input[type="submit"],
  #socialMediaLoginContainer .btn-social,
  #socialMediaLoginContainer input[type="submit"] {
    width: 400px;
  }
}
.reg-title {
  font-size: @headlineSize;
  line-height: 33px;
  color: #494a45;
  position: relative;
  margin: 1.5em 0 1em;
  font-weight: bold;
}
.login-form,
.register-form {
  overflow: hidden;
  #mainHolder {
    padding-top: 20%;
  }
  #homeFooter {
    display: block;
    position: fixed;
    bottom: 0;
    width: 100%;
    max-width: 100%;
    border-top: 1px solid #eee;
    left: 0;
    right: 0;
    padding: 0 2em 1em;
  }
  #homeFooter.footer-separate {
    .footer-container {
      margin-top: 16px;
      border-top: 0;
      padding-top: 0;
    }
  }
  .footer-container {
    margin-top: 16px;
  }
}
.register-form {
  #mainHolder {
    padding-top: 2.5%;
  }
}
.login-form {
  #mainHolder {
    padding-top: 10%;
  }
}
@media (min-width: 992px) {
  .login-form{
    #mainHolder {
      padding-top: 5.5%;
    }
  }
}
.register-form {
  #regForm {
    position: relative;
    overflow: hidden;
  }
}
.login-form {
  #loginForm {
    position: relative;
    overflow: hidden;
  }
}
::-webkit-input-placeholder { /* WebKit, Blink, Edge */
    color:    @placeHolderColor;
}
:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
   color:    @placeHolderColor;
   opacity:  1;
}
::-moz-placeholder { /* Mozilla Firefox 19+ */
   color:    @placeHolderColor;
   opacity:  1;
}
:-ms-input-placeholder { /* Internet Explorer 10-11 */
   color:    @placeHolderColor;
}
select:not([multiple]) {
  border: 1px solid #bdb9b9;
  overflow: hidden;
  background-image: none;
}
@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  select:not([multiple]) {
      background-image: none !important;
      padding-right: 0.5em !important;
  }
}
/* Accordion styles */
.tabs-container {
  .tab {
    position: relative;
    margin-bottom: 1px;
    width: 100%;
    overflow: hidden;
  }
  input.tab-input {
    position: absolute;
    opacity: 0;
    z-index: -1;
  }
  label.tab-label {
    position: relative;
    display: block;
    padding: 0 0.5em 0 2.5em;
    color: #777777;
    border: 1px solid #b8babb;
    font-weight: normal;
    line-height: 3;
    cursor: pointer;
    width: 100%;
    max-width: 100%;
  }
  label.tab-label.active,
  label.tab-label:hover {
    color: @linkHover;
  }
  label.tab-label.active {
    font-weight: 500
  }
  .tab-content {
    max-height: 0;
    overflow: auto;
    margin: 0;
    padding: 0;
    border: 0;
    -webkit-transition: max-height .35s;
    -o-transition: max-height .35s;
    transition: max-height .35s;
  }
  /* :checked */
  label.tab-label.active ~ .tab-content,
  input.tab-input:checked ~ .tab-content {
    max-height: 27em;
    margin: 1em auto;
    padding: 0.5em;
    border: 1px solid #e4dfdf;
  }
  /* Icon */
  label.tab-label::after {
    position: absolute;
    left: 0;
    top: 0;
    display: block;
    width: 3em;
    height: 3em;
    line-height: 3;
    text-align: center;
    -webkit-transition: all .35s;
    -o-transition: all .35s;
    transition: all .35s;
  }
  input.tab-input + label.tab-label::after {
    content: "\25BC";
  }
  input.tab-input:checked + label.tab-label::after {
    transform: rotateX(180deg);
  }
}
#mainDiv.profile .tabs-container {
  margin-bottom: 1.5em;
}
#resourcesContentContainer {
  min-height: 50vh;
  .tab-label {
    font-size: 1.1em;
    background: @featureBtnColor;
    color: #FFF;
    letter-spacing: 0.1em;
  }
  .tabs-container input.tab-input:checked+label.tab-label::after {
    visibility: hidden;
  }
  .tab-content {
    background: lighten(@featureBtnColor, 42%);
    border: 0;
    overflow: hidden;
    ul {
      padding: 1em 1em 0.5em;
    }
    li {
      line-height: 3rem;
      margin-left: 1em;
    }
  }
}
.work-instruction-title {
  background: @featureBtnColor;
  padding: 0.5em;
  color: #FFF;
  display: block;
  position: relative;
  & .pull-right {
    position:absolute;
    width: 125px;
    right:0;
    top: 2px;
    & span {
      display: inline-block;
      border: 1px solid rgba(255, 255, 255, 0.4);
      padding: 6px 12px;
      &:hover {
        cursor: pointer;
        background: darken(@featureBtnColor, 5%);
      }
    }
    & span:last-of-type {
      margin-left: 0.1em;
    }
    & a {
      color: #FFF;
      &:hover {
        cursor: pointer;
      }
    }
  }
}
.work-instruction-printicon {
  &:hover {
    cursor: pointer;
  }
}
.work-instruction-content-heading {
  margin-bottom: 1.5em;
}
.work-instruction-content {
  padding: 0 0.5em;
  max-width: 100%;
  overflow: auto;
}
.form-control {
  height: @inputHeight;
  border-radius: 0;
}
.form-group label {
  font-weight: normal;
}
.feature-btn {
  transition: all 0.2s ease-in-out 0s;
  -webkit-transition: all 0.2s ease-in-out 0s;
  border: 2px solid @baseColor;
}
.feature-btn-primary {
  background-color: @bodyBgColor;
  color: @baseColor;
  &:hover, &:active {
    color: @featureBtnHoverColor;
    background-color: @linkHover;
  }
}
#socialMediaRegistrationContainer,
#socialMediaLoginContainer,
.social-divider-container
 {
  display: none;
}
#tnthNavWrapper {
  z-index: 20;
  position: relative;
}
#iqFooterWrapper {
  display: none;
  border-top: solid 1px #eee;
  margin-top: 2em;
}
/* ... */

